--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,3 @@
 {
-  "builds": [
-    {
-      "src": "vercel_build.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build/web"
-      }
-    }
-  ]
+  "outputDirectory": "build/web"
 }
